Exibe a diferença entre as datas na página de resultados

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     </main>
     <footer>
       <p>Desenvolvido por <a href="">@guilherme-messias</a></p>
-
+      <p>hello </p>
     </footer>
   </body>
 </html>
