--- a/public/result.html
+++ b/public/result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resultado</title>
-    <script src="../dist/index.js" type="module" defer></script>
+    <script src="../dist/result.js" type="module" defer></script>
   </head>
   <body>
     <header>
