Atualiza links do autor para incluir URL no rodapé das páginas HTML

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       <input type="button" value="Calcular" id="btn-submit" />
     </main>
     <footer>
-      <p>Desenvolvido por <a href="">@guilherme-messias</a></p>
+      <p>Desenvolvido por <a href="https://github.com/guilherme-messias">@guilherme-messias</a></p>
     </footer>
   </body>
 </html>
