--- a/public/result.html
+++ b/public/result.html
@@ -14,10 +14,10 @@
       <div id="result"></div>
       <input type="button" id="btn-copy" value="Copiar" />
       <br /><br />
-      <a href="">Realizar novo cálculo</a>
+      <a href="/public/index.html">Realizar novo cálculo</a>
     </main>
     <footer>
-      <p>Desenvolvido por <a href="">@guilherme-messias</a></p>
+      <p>Desenvolvido por <a href="https://github.com/guilherme-messias">@guilherme-messias</a></p>
     </footer>
   </body>
 </html>
