--- a/public/result.html
+++ b/public/result.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resultado</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
     <script src="../dist/result.js" type="module" defer></script>
   </head>
   <body>
@@ -12,7 +15,7 @@
     </header>
     <main>
       <div id="result"></div>
-      <input type="button" id="btn-copy" value="Copiar" />
+      <input type="button" id="btn-copy" value="Copiar" class="btn btn-success"/>
       <br /><br />
       <a href="/public/index.html">Realizar novo cálculo</a>
     </main>
