--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculando dias entre duas datas</title>
     <link rel="stylesheet" href="./styles/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
     <script src="../dist/index.js" type="module" defer></script>
   </head>
   <body>
     <header>
-      <h1>Calculando dias entre duas datas</h1>
+      <h1>Calculando Dias Entre Duas Datas</h1>
     </header>
     <main>
       <div id="container-date">
