Renomeia contêineres de data no HTML e ajusta cores e estilos no CSS para melhor organização e legibilidade

--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,14 @@
     <main>
       <div id="container-date">
 
-        <div class="date">
+        <div id="container-startDate">
 
           <label for="startDate">Data Início</label>
           <br>
           <input type="date" id="startDate" name="startDate" required />
         </div>
 
-        <div class="date">
+        <div id="container-endDate">
 
           <label for="endDate">Data Fim</label>
           <br>
