--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
       <input type="button" value="Calcular" id="btn-submit" class="btn btn-success"/>
     </main>
     <footer>
-      <p>Desenvolvido por <a href="https://github.com/guilherme-messias">@guilherme-messias</a></p>
+      <p>Autor: Guilherme Messias</p>
+      <p>Contato: <a href="mailto:messiasguilherme700@gmail.com" target="_blank">messiasguilherme700@gmail.com</a></p>
     </footer>
   </body>
 </html>
