--- a/public/result.html
+++ b/public/result.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resultado</title>
     <link rel="stylesheet" href="./styles/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
     <script src="../dist/result.js" type="module" defer></script>
   </head>
@@ -20,7 +19,8 @@
       <a href="/public/index.html">Realizar novo cálculo</a>
     </main>
     <footer>
-      <p>Desenvolvido por <a href="https://github.com/guilherme-messias">@guilherme-messias</a></p>
+      <p>Autor: Guilherme Messias</p>
+      <p>Contato: <a href="mailto:messiasguilherme700@gmail.com" target="_blank">messiasguilherme700@gmail.com</a></p>
     </footer>
   </body>
 </html>
