Estiliza link para retornar a página inicial

--- a/public/result.html
+++ b/public/result.html
@@ -14,9 +14,10 @@
     </header>
     <main>
       <div id="result"></div>
+      <br><br>
       <input type="button" id="btn-copy" value="Copiar" class="btn btn-success"/>
       <br /><br />
-      <a href="/public/index.html">Realizar novo cálculo</a>
+        <a href="/public/index.html" id="mainPageLink">Realizar novo cálculo</a>
     </main>
     <footer>
       <p>Autor: Guilherme Messias</p>
